--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gulp-connect": "^5.7.0",
     "gulp-data": "^1.3.1",
     "gulp-pug": "^4.0.1"
+  },
+  "devDependencies": {
+    "gulp-sitemap": "^8.0.0"
   }
 }
