--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "gulp-connect": "^5.7.0",
     "gulp-data": "^1.3.1",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.1.0"
+    "node-sass": "^6.0.1"
   },
   "devDependencies": {
-    "gulp-sitemap": "^8.0.0"
+    "gulp-sass": "^5.0.0",
+    "gulp-sitemap": "^8.0.0",
+    "sass": "^1.39.0"
   }
 }
