--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "gulpfile.js",
   "author": "SeanGau",
   "license": "MIT",
+  "engines" : { 
+    "npm" : ">=8.0.0",
+    "node" : ">=16.0.0"
+  },
   "scripts": {
     "start": "node update_data.js;gulp server",
     "build": "node update_data.js;gulp build"
